--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ twitter_username: AmbrishRawat
 github_username:  ambrishrawat
 
 disqus:
-      shortname: arawat
+      shortname: ambrishrawat
 
 # Build settings
 markdown: kramdown
